generated-tests/tests/snapshots/rust/generated_tests__rust__test_generated_macro_invocation.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
println!("{}", var6)

AST:
(source_file
  (macro_invocation
    (identifier println)
    (token_tree
      (string_literal
        (string_content)
      )
      (identifier var6)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
