generated-tests/tests/snapshots/rust/generated_tests__rust__test_generated_match_expression.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
match opt1 { Some(x7) => x7, None => 0 }

AST:
(source_file
  (expression_statement
    (match_expression
      (identifier opt1)
      (match_block
        (match_arm
          (match_pattern
            (tuple_struct_pattern
              (identifier Some)
              (identifier x7)
            )
          )
          (identifier x7)
        )
        (match_arm
          (match_pattern
            (identifier None)
          )
          (integer_literal)
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
