generated-tests/tests/snapshots/rust/generated_tests__rust__test_generated_mod_item.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
mod test_mod { pub fn test_fn7() -> i32 { 42 } }

AST:
(source_file
  (mod_item
    (identifier test_mod)
    (declaration_list
      (function_item
        (visibility_modifier)
        (identifier test_fn7)
        (parameters)
        (primitive_type)
        (block
          (integer_literal)
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "test_mod",
            line_number: 1,
            definition_type: ModuleDefinition,
            scope: None,
        },
        Definition {
            name: "test_fn7",
            line_number: 1,
            definition_type: FunctionDefinition,
            scope: Some(
                "test_mod.test_fn7",
            ),
        },
    ],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
