generated-tests/tests/snapshots/rust/generated_tests__rust__test_generated_negative_literal.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
let result = x10 - y3;

AST:
(source_file
  (let_declaration
    (identifier result)
    (binary_expression
      (identifier x10)
      (identifier y3)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "result",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
