generated-tests/tests/snapshots/rust/generated_tests__rust__test_generated_raw_string_literal.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
r"test"

AST:
(source_file
  (ERROR
    (raw_string_literal
      (string_content)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
